# ChangeLog for app-portage/meatoo
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/meatoo/Attic/ChangeLog,v 1.4 2007/05/15 09:28:15 bangert Exp $

  15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  11 May 2007; Rob Cakebread <pythonhead@gentoo.org> meatoo-0.1.1.ebuild:
  Added setuptools dependency.

*meatoo-0.1.1 (30 Apr 2007)

  30 Apr 2007; Rob Cakebread <pythonhead@gentoo.org> -meatoo-0.1.0.ebuild,
  +meatoo-0.1.1.ebuild:
  Version bump. Dropped 0.1.0 incompatible with server.

*meatoo-0.1.0 (26 Apr 2007)

  26 Apr 2007; Rob Cakebread <pythonhead@gentoo.org> +metadata.xml,
  +meatoo-0.1.0.ebuild:
  Initial commit.
