@@ -1,4 +1,4 @@
 DIST meatoo-0.1.1.tar.gz 11191 RMD160 754b5eee44060a8cd1202e2f668b4a1cf7e5fbba SHA1 699f719b40e27832cb089fc4a9068c0f5eab11df SHA256 947a8d28fdbe9494002314939a4fc667e81bf7dc34167163e72e4dfe43c32c3f
-EBUILD meatoo-0.1.1.ebuild 545 RMD160 3ac6d10fbbfef874b9cfaebea7ba1a94f94942fa SHA1 ce2e2b06ffb367ee700594545bff784d2ff4c60a SHA256 7ba241c97a2831db598ad0419f0521ed28c67f28beeef82d22e6efc6dd8e7b62
-MISC ChangeLog 733 RMD160 a7b889031002ef2d42c3c202bb95f43c3ec09e34 SHA1 d044b840df05bb3c182113dbf8a713854e03b578 SHA256 a390aaca11167bf1550cbf8a646777a87552f754ded2e8fbb2c3f9dcccb5c942
+EBUILD meatoo-0.1.1.ebuild 550 RMD160 b2c5d7ed0e4e2ce98b10c743388508d5f288be50 SHA1 dd1bd674d6add87bced6896929a4cb1eac967563 SHA256 eeb808e6ffe5eb7f79847d5a9aa68aac57c210f9ed8bec902c5c173516029c3c
+MISC ChangeLog 829 RMD160 25c3e65299f22bbab56b5645e9f087c66584d1f6 SHA1 f5709a1a5fb7a63efca118ed9a4363a1034d5de7 SHA256 226f903d5c530e6c373a4ff60d97f60f489be442d63a3ad962de448f8c772c9c
 MISC metadata.xml 560 RMD160 dfd4f2847aa2a38dabef01dba343bef0bcbe2809 SHA1 db95b780b70c6c87507add81508324f5f5f295a2 SHA256 736ec3644fefb29614868dd04373df8d16facc341123bd9aa57fa9c8deb008e3
