@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/meatoo/Attic/meatoo-0.1.1.ebuild,v 1.3 2007/07/15 05:25:48 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/meatoo/Attic/meatoo-0.1.1.ebuild,v 1.4 2009/01/05 19:23:55 patrick Exp $
 
 inherit distutils
 
@@ -9,7 +9,7 @@ DESCRIPTION="Command-line client for Meatoo using XML-RPC."
 HOMEPAGE="http://tools.assembla.com/meatoo/"
 SRC_URI="http://cheeseshop.python.org/packages/source/m/meatoo/${P}.tar.gz"
 LICENSE="GPL-2"
-KEYWORDS="~x86"
+KEYWORDS="~x86 ~amd64"
 SLOT="0"
 IUSE=""
 DEPEND=">=dev-python/setuptools-0.6_rc3"
